# OrganizacaoDeComputadores-Unidade2

./: .gitignore  CMakeLists.txt  README.md
docs/relatorio/: .~lock.relatorio_spin.docx#  relatorio_spin.docx
input/: topology_8.txt  traffic_1.txt  traffic_2.txt  traffic_stress.txt
output/: simulation_log.txt  simulation_log_test.txt  stress_log.txt  stress_short_log.txt
src/: config_loader.cpp  config_loader.hpp  main.cpp  network.cpp  network.hpp  packet.cpp  packet.hpp  router.cpp  router.hpp  traffic_event.hpp
